# rusty_templ

./: Cargo.toml  README.md  dev.sh  rustfmt.toml
examples/: Cargo.toml  from_file.rs  from_file.txt  templ_fn.rs  templ_struct.rs  templ_tuple_struct.rs
macros/: Cargo.toml
macros/src/: attribute.rs  fn_macro.rs  lib.rs  output_steam.rs  struct_macro.rs  syn_bail.rs
macros/src/parsing/: lexer.rs  mod.rs  parser.rs  span_len.rs
rusty_template/: Cargo.toml
rusty_template/src/: lexer.rs  lib.rs
src/: lib.rs
