[workspace]
members = [
    "macros",

    # ---
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rusty_template = { path = "." }
macros = { path = "./macros" }
thiserror = "1.0"

[package]
name = "rusty_template"
version.workspace = true
edition.workspace = true

[dependencies]
macros.workspace = true
thiserror.workspace = true

[features]
stable = ["macros/stable"]
